# tibia-api-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  justfile
.github/workflows/: build-and-publish-images.yaml  run-rust-checks.yml
src/: error.rs  lib.rs  main.rs  prelude.rs  tibia_page.rs
src/clients/: mod.rs  tibia.rs
src/handlers/: characters_character_name.rs  mod.rs  redocly.rs  towns.rs  world_details.rs  worlds.rs  worlds_world_name.rs  worlds_world_name_guilds.rs  worlds_world_name_kill_statistic.rs  worlds_world_name_kill_statistics.rs  worlds_world_name_residences.rs
src/handlers/v1/: mod.rs
src/handlers/v1/towns/: get_towns.rs  mod.rs
src/handlers/v1/worlds/: get_world.rs  get_world_guilds.rs  get_world_kill_statistics.rs  get_worlds.rs  mod.rs
src/handlers/worlds/: mod.rs  models.rs
src/models/: character_info.rs  game_world_type.rs  guild.rs  kill_statistics.rs  location.rs  mod.rs  player.rs  pvp_type.rs  residence.rs  transfer_type.rs  vocation.rs  world.rs  world_details.rs  worlds.rs
src/utils/: mod.rs  openapi.rs  redocly.rs  tibia.rs  time.rs
tests/: guilds.html  guilds.rs  kill_statistics.html  kill_statistics.rs  list_worlds.html  list_worlds.rs  vendor.yml  world_details.html  world_details.rs
tests/api/: __healthcheck.rs  characters_character_name.rs  main.rs  mocked_client.rs  towns.rs  world.rs  worlds.rs  worlds_world_name.rs  worlds_world_name_guilds.rs  worlds_world_name_kill_statistics.rs  worlds_world_name_residences.rs
tests/mocks/: guilds-invalid_world-200.html  guilds-jaguna-200.html  guilds-jaguna-200.json  houses-invalid_world-edron-200.html  houses-jaguna-edron-200.html  houses-jaguna-edron-200.json  houses-jaguna-invalid_town-200.html  killstatistics-antica-200.html  killstatistics-antica-200.json  killstatistics-invalid_world-200.html  maintenance-200.html  towns-200.html  towns-200.json  world-antica-200.html  world-antica-200.json  world-invalid_world-200.html  worlds-200.html  worlds-200.json
