[package]
name = "tibia-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.15", features = ["macros"] }
http-cache-reqwest = "0.9.0"
reqwest = { version = "0.11.16", features = ["brotli", "gzip", "deflate", "json"] }
reqwest-middleware = "0.2.1"
scraper = "0.16.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "2.3.2"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
