[package]
name = "tibia_api"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["macros"] }
capitalize = "0.1.0"
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = "0.8.3"
futures = "0.3.28"
http-cache-reqwest = "0.11.1"
itertools = "0.11.0"
log = "0.4.19"
once_cell = "1.18.0"
regex = "1.9.3"
reqwest = { version = "0.11.17", features = [
  "json",
  "brotli",
  "gzip",
  "deflate",
] }
reqwest-middleware = "0.2.3"
scraper = "0.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.3.0"
thiserror = "1.0.43"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.4.1", features = [
  "trace",
  "cors",
  "compression-gzip",
  "fs",
] }
tower-request-id = "0.2.1"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
utoipa = { version = "3.5.0", features = ["preserve_order"] }
utoipa-redoc = { version = "0.1.0", features = ["axum"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
